# assay

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  POSTMORTEM.md  README.md  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  server.py
api/: routes.py
backtest/: cache.py  case_study.py  edgar_fetcher.py  engine.py  event_prices.py  historical_fetcher.py  portfolio.py  report.py  snapshot_builder.py  stats.py
data/: cache.py  fama_french.py  fetcher.py  quality.py  sp500.py  sp500_historical.py  universe.py
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN_DECISIONS.md  METHODOLOGY.md  STRATEGIC_DIAGNOSIS_2026-05-19.md  STRATEGY.md
examples/: README.md  bear_case_overrides.json  outreach_template.md  portfolio_doctor_sample.html  portfolio_doctor_sample.md  sample_portfolio.csv  validation_log.md
models/: base.py  dcf.py  relative.py
output/: console_report.py  csv_report.py
quality/: base.py  growth.py  piotroski.py
scoring/: conviction.py  filters.py  momentum_scorer.py  opportunity.py  quality_scorer.py  trajectory.py  value_scorer.py
scripts/: generate_portfolio_doctor_sample.py  long_term_analysis.py  run-daily.sh  run_investigation.py
tests/: test_api.py  test_backtest_engine.py  test_cache.py  test_data_quality_grade.py  test_filed_date_preservation.py  test_filters.py  test_gate_audit_csv.py  test_momentum.py  test_portfolio.py  test_quality_models.py  test_relative_model.py  test_screen_diff_enrichment.py  test_snapshot_builder.py  test_stats_se.py  test_trajectory.py  (+1 more)
web/: index.html  (+3 more)
(+30 files in other folders)
