[project]
name = "sp500-screener"
version = "0.1.0"
description = "S&P 500 intrinsic value + quality + growth stock screener with 2D conviction matrix"
requires-python = ">=3.11"

dependencies = [
    "yahooquery>=2.3.3",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "rich>=13.0",
    "requests>=2.28",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
