[project]
name = "assay"
version = "0.2.0"
description = "Assay — S&P 500 value + quality stock screener with 2D conviction matrix"
requires-python = ">=3.11"

dependencies = [
    "yahooquery>=2.3.3",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "rich>=13.0",
    "requests>=2.28",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
